--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reply-test",
   "version": "1.0.0",
   "description": "Test by Reply",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "docker build -t reply-app:latest .",
