--- a/package.json
+++ b/package.json
@@ -4,22 +4,31 @@
   "description": "Test by Reply",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -r ts-node/register tests/**/*.ts",
     "build": "docker build -t reply-app:latest .",
-    "start": "npm run node",
+    "start": "nodemon -x npm run node",
     "node": "ts-node --compiler typescript --project tsconfig.json src/index.ts"
   },
   "author": "Eden Reich <eden.reich@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/chai-http": "^3.0.5",
     "@types/koa-bodyparser": "^5.0.1",
+    "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
+    "@types/mocha": "^5.2.5",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.3",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
   "dependencies": {
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
