--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "start": "npm run node",
     "watch": "nodemon -x npm run node",
     "dist": "tsc",
-    "node": "ts-node --compiler typescript --project tsconfig.json src/index.ts"
+    "node": "ts-node --compiler typescript --project tsconfig.json src/index.ts",
+    "migration:create": "./node_modules/.bin/typeorm migration:create",
+    "migrate": "ts-node ./node_modules/.bin/typeorm migration:create"
   },
   "author": "Eden Reich <eden.reich@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^2.0.0",
     "@types/chai": "^4.1.4",
     "@types/chai-http": "^3.0.5",
+    "@types/faker": "^4.1.3",
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
     "@types/mocha": "^5.2.5",
+    "Faker": "^0.7.2",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "mocha": "^5.2.0",
@@ -28,6 +33,7 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
