add moment and faker as dependencies also add seed script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "watch": "nodemon -x npm run node",
     "dist": "tsc",
     "node": "ts-node --compiler typescript --project tsconfig.json src/index.ts",
-    "monitor": "ts-node --compiler typescript --project tsconfig.json src/Scheduler/jobs.ts"
+    "monitor": "ts-node --compiler typescript --project tsconfig.json src/Scheduler/jobs.ts",
+    "seed": "ts-node --compiler typescript --project tsconfig.json src/Database/seeders/TableSeeder.ts"
   },
   "author": "Eden Reich <eden.reich@gmail.com>",
   "license": "MIT",
@@ -23,9 +24,9 @@
     "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.31",
     "@types/mocha": "^5.2.5",
-    "Faker": "^0.7.2",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "faker": "^4.1.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
     "typescript": "^3.0.1"
@@ -36,6 +37,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
     "koa-router": "^7.4.0",
+    "moment": "^2.22.2",
     "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
     "ts-node": "^7.0.1",
