--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "es2017",
         "module": "commonjs",
+        "moduleResolution": "node",
         "outDir": "dist",
         "rootDir": "src",
         "sourceMap": true,
@@ -18,6 +19,7 @@
         "esModuleInterop": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src/**/*"
